--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -4,10 +4,10 @@
   display: none;
 }
 
-#wall .tag-2 {
+#wall .tag-3.slick {
   display: none;
 }
 
-#wall .tag-3 {
+#wall .parent {
   display: none;
 }
